tests/out/error/struct/decl.in.bt
struct MyStruct{
	foo i32
	foo bool := 123
}
