tests/out/error/struct/decl.out
tests/out/error/struct/decl.in.bt:3:4 error: duplicate field name foo
